# avss-akdg

./: Cargo.toml  README.md
avss/: Cargo.toml
avss/benches/: bench.rs
avss/src/: lib.rs
avss/src/avss/: dealer.rs  party.rs
avss/src/one2many/: prover.rs  verifier.rs
benches/: bench.rs
gemini-fri/: Cargo.toml
gemini-fri/benches/: bench.rs
gemini-fri/src/: lib.rs  prover.rs  verifier.rs
pcs/benches/: bench.rs
pcs/src/: lib.rs  prover.rs  verifier.rs
src/: lib.rs  main.rs  merkle_tree.rs  one2many.rs  random_oracle.rs  rolling_fri.rs  util.rs
src/algebra/: coset.rs  field.rs  mod.rs  polynomial.rs
src/algebra/field/: fp64.rs  mersenne61_ext.rs  mod.rs
src/avss/: dealer.rs  party.rs
src/domain/: mod.rs  radix2_domain.rs  subgroup.rs
src/fields/: bigint.rs  fp64.rs  mod.rs
src/one2many/: prover.rs  verifier.rs
src/polynomial/: mod.rs
src/protocal/: fri.rs  rolling_fri.rs
src/rolling_fri/: prover.rs  verifier.rs
util/: Cargo.toml
util/src/: lib.rs  merkle_tree.rs  query_result.rs  random_oracle.rs
util/src/algebra/: coset.rs  field.rs  polynomial.rs
util/src/algebra/field/: fp64.rs  mersenne61_ext.rs
virgo/: bench_gkr.py
virgo/benches/: bench.rs
virgo/src/: lib.rs  prover.rs  verifier.rs
vss/: Cargo.toml
vss/benches/: bench.rs
vss/src/: lib.rs  merkle_tree.rs  util.rs
vss/src/algebra/: polynomial.rs
vss/src/avss/: dealer.rs  party.rs
vss/src/one2many/: prover.rs  verifier.rs
