[package]
name = "vss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
blake3 = "1.3"
rs_merkle = "1.3"
hex = "0.4"
dyn-clone = "1.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false